aula matplotlib com comentários

--- a/aula_matplotlib.ipynb
+++ b/aula_matplotlib.ipynb
@@ -327,6 +327,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ra7cGa2L2QUp"
+      },
+      "source": [
+        "*para gerar este grafico tenh que passar pares de pontos que serão coordenadas para poder montar o gráfico*"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "z9RKQBVlNiGZ",
@@ -375,6 +384,15 @@
       },
       "source": [
         "### Legendas, títulos e rótulos"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d3H-9er12faj"
+      },
+      "source": [
+        "*neste são criadas 2 linhas que recebem parametros de 2 arrays - e tbm está sendo passado rótulo que cria a legenda no gráfico - com label no plot / xlabel ou ylabel : cria o nome dos eixos / title : customiza o nome do  gráfico*"
       ]
     },
     {
@@ -434,6 +452,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a4L66sef3Vou"
+      },
+      "source": [
+        "*plt.bar plota os dados passados no gráfico / para customizar a cor á só add color no plt.bar*"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "orCUfTnHRvcA",
@@ -485,6 +512,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YX4qsCco4SsP"
+      },
+      "source": [
+        "*utilizado para analise de distribuição de dados / bins define o intervalo / histtype = bar - define o histograma com forma de barra/ rwidth define a largura das barras*"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "p6opSPo0SM9t",
@@ -533,6 +569,15 @@
       },
       "source": [
         "### Gráfico de Distribuição (*scatter plot*)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_6Gzzg0d5BnB"
+      },
+      "source": [
+        "*ele é bidimenssional / x representa o jogador e o y representa quantos gols o jogador da mesma posição fez / s é o tamanho das bolinhas / marker define qual vai ser o formato do ponto*"
       ]
     },
     {
@@ -588,6 +633,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WMnJJrIe6orz"
+      },
+      "source": [
+        "*dias representa o dia da semana / as demais arrays representam a qtd de horas para cada atividade / o plot é feito com plt.stackplot onde é passado todos os arrays e ele combina / as cores são definidas por camadas / mas ele n tem legendas*"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "hZoW9GdgUX7S",
@@ -639,6 +693,15 @@
       },
       "source": [
         "O problema do gráfico acima é que não sabemos o que representa cada uma das cores."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fgcfeSa07egh"
+      },
+      "source": [
+        "*nesta célula já é add a legenda para facilitar a leitura do gráfico*"
       ]
     },
     {
@@ -703,6 +766,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IrMidxCf7oCs"
+      },
+      "source": [
+        "*o plot do grafico é feito com plt.pie / shadow é sobreamento / explode é o valor do pedaço que fica fora /  startangle starta o angulo que ira iniciar / autopct define o tamanho do grafico*"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "NNr2BPeKWjAQ",
@@ -756,6 +828,15 @@
       },
       "source": [
         "### Gráfico com Datas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JClUb4bZ8mtg"
+      },
+      "source": [
+        "*o plot do grafico baseado em data é feito com plt.plot_date onde é passado o campo date da tabela , em relação ao campo closep , o tracejado e rotulo é do Price*"
       ]
     },
     {
@@ -855,6 +936,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WHUiRBO0-PG1"
+      },
+      "source": [
+        "*exibição em forma animada como um gif / biblioteca animation*"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "N0tOBFxGdc01",
@@ -915,6 +1005,15 @@
       },
       "source": [
         "### Subplots"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "py7Vx2U5-cdf"
+      },
+      "source": [
+        "*forma de agrupamento de vários gráficos em uma mesma figura / ax é o frame que define a posição de cada gráfico / plt.subplots (2,2) define a qtd de linhas por colunas , como são 4 graficos então a coordenada é 2x2*"
       ]
     },
     {
@@ -983,6 +1082,15 @@
       },
       "source": [
         "# Gráficos com Pandas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1awgIVjw_T6f"
+      },
+      "source": [
+        "*df é uma estrutura bidimenssional*"
       ]
     },
     {
@@ -1123,6 +1231,15 @@
       },
       "source": [
         "### Scatter Plot"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nmCw6Uma_ZfM"
+      },
+      "source": [
+        "*grafico de distribuição / para plotar é df.plot - kind define o tipo do grafico / x campo e y o outro campo*"
       ]
     },
     {
@@ -1380,6 +1497,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QnunH48SCMhN"
+      },
+      "source": [
+        "*plt.legend - loc permite definir a localização da legenda*"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "3I7ZPfKzMVMj",
@@ -1449,6 +1575,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h5UODJbmClY5"
+      },
+      "source": [
+        "*ax é um objeto que é instanciado pelo plt.gca*"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "MW2cjb0XNhle",
@@ -1508,6 +1643,15 @@
       },
       "source": [
         "Exemplo 1:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TKRv1sgXDaY5"
+      },
+      "source": [
+        "*df.groupby é usado apara agrupar dados / agrupando por estado onde o nome não é unico/ e o graf é do tipo bar*"
       ]
     },
     {
@@ -1894,6 +2038,15 @@
       },
       "source": [
         "### Plotar a posição dos usuários no mapa"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k-e-tBmJFlFa"
+      },
+      "source": [
+        "*identifico o tipo de geometria (ponto, linha e ..) / crio o obejto gdf - ele é uma instancia do geodataframe / world - defino o tipo de mapa que neste está sendo usado o \"naturalearth_lowers\"*"
       ]
     },
     {
